2008-04-25  Pawel Salek

	* libbalsa/mailbox_imap.c: create header even for empty parts.

2008-04-25  Albrecht Dreß

	* src/balsa-mime-widget-message.c: use URIs instead of paths.
	* src/sendmsg-window.[ch]: use gnome-vfs for attachment reading.
	* src/balsa-mime-widget-callbacks.c: ditto.
	* src/balsa-message.c: allow saving to URIs.
	* src/main.c: -o flag accepts an URI now.
	* src/information-dialog.h: add argument checking.
	* libbalsa/misc.[hc]: return more detailed error information.
	* libbalsa/body.h: store attachment URIs.
	* libbalsa/send.[ch]: handle errors when reading from URIs.
	* libbalsa/files.[ch]: file access operations use URIs now.
	* libbalsa/misc.c: move some functions to libbalsa-vfs.c
	* libbalsa/body.c: part operations accept URIs now.

2008-04-22  Pawel Salek

	* src/balsa-app.c: format=flowed by default.
	* libinit_balsa/assistant_page_user.[ch]: guess more stuff.
	* libinit_balsa/assistant_init.c: we have new code already, keep
	it silent.

2008-04-21  Peter Bloomfield

	* libbalsa/misc.h: if !USE_REGEX is enough.

2008-04-21  Peter Bloomfield

	* configure.in: implement --enable-gregex (default=no); change
	default for --enable-pcre to no.
	* libbalsa/filter-funcs.c: (libbalsa_condition_regex_free):
	condition on USE_REGEX.
	* libbalsa/filter-private.h: ditto.
	* libbalsa/mime.c: (mark_urls, libbalsa_insert_with_url,
	libbalsa_unwrap_selection): ditto.
	* libbalsa/misc.h: ditto.
	* src/balsa-app.c: ditto.
	* src/balsa-app.h: ditto.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	ditto.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_plain): ditto.
	* src/print.c: (print_wrap_body): ditto.
	* src/quote-color.c: (is_a_quote): ditto.
	* src/quote-color.h: ditto.
	* src/sendmsg-window.c: (reflow_selected_cb): ditto.
	* src/spell-check.c: (balsa_spell_check_start,
	balsa_spell_check_destroy, next_word): ditto.

2008-04-19  Peter Bloomfield

	* libbalsa/message.c: (lbmsg_set_header): scrap remaining
	warnings.
