@@ -1,3 +1,12 @@
+2008-04-28  Peter Bloomfield
+
+	* src/balsa-index.c: (balsa_index_select_all): emit changed
+	signal; (balsa_index_count_selected_messages): new method.
+	* src/balsa-index.h: new method
+	balsa_index_count_selected_messages.
+	* src/main-window.c: use it to manage menu item sensitivity.
+	* src/main-window.h: subdivide GtkActionGroups.
+
 2008-04-25  Pawel Salek
 
 	* libbalsa/mailbox_imap.c: create header even for empty parts.
